Fixed background appearing on clicking links/icons on mobile devices. Todo: fix shiverring of logo icon whenever animation text transitions

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   letter-spacing: 1.5px;
   display: flex;
   flex-direction: column;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body,
